--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="assets/css/style.css" type="text/css">
-  <title>Document</title>
+  <title>Odin Recipies</title>
 </head>
 
 <body>
+  <h1 class="Delius_Headers">Odin Recipes</h1>
 
   <script src="assets/js/index.js"></script>
 </body>
