--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <h1 class="Delius_Headers">Odin Recipes</h1>
 
-  <script src="assets/js/index.js"></script>
+  <script src="assets/js/script.js"></script>
 </body>
 
 </html>
