--- a/assets/pages/lasagne.html
+++ b/assets/pages/lasagne.html
@@ -9,6 +9,12 @@
 </head>
 
 <body>
+  <nav class="home">
+    <a href="../../index.html">
+      <button class="home-button">HOME</button>
+    </a>
+
+  </nav>
   <h1 class="Delius_Headers">Odin Lasagne</h1>
 
   <script src="assets/js/script.js"></script>
