--- a/assets/pages/lasagne.html
+++ b/assets/pages/lasagne.html
@@ -9,13 +9,29 @@
 </head>
 
 <body>
+  <!-- Nav bar, button wrapped in an anchor -->
   <nav class="home">
     <a href="../../index.html">
       <button class="home-button">HOME</button>
     </a>
-
   </nav>
+
   <h1 class="Delius_Headers">Odin Lasagne</h1>
+
+  <img class="circle" src="../images/lasagne.webp" width="200" height="200">
+  <p class="recipie_link">A classic italian favourite</p>
+  <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga ea distinctio necessitatibus.</p>
+
+  <h3 class="sub-heading">Ingredients</h3>
+
+  <ul class="text align-text-left">
+    <li>Lorem ipsum dolor sit amet consectetur</li>
+    <li>Lorem, ipsum dolor.</li>
+    <li>Lorem ipsum dolor sit.</li>
+    <li>Lorem ipsum dolor sit amet consectetur.</li>
+    <li>Lorem, ipsum.</li>
+  </ul>
+
 
   <script src="assets/js/script.js"></script>
 </body>
