complete lasagne recipie page

--- a/assets/pages/lasagne.html
+++ b/assets/pages/lasagne.html
@@ -32,6 +32,16 @@
     <li>Lorem, ipsum.</li>
   </ul>
 
+  <h3 class="sub-heading">Steps</h3>
+
+  <ol class="text align-text-left">
+    <li>Lorem ipsum dolor sit amet consectetur adipisicing.</li>
+    <li>Lorem ipsum dolor sit.</li>
+    <li>Lorem, ipsum.</li>
+    <li>Lorem ipsum dolor sit.</li>
+    <li>Lorem!</li>
+  </ol>
+
 
   <script src="assets/js/script.js"></script>
 </body>
