hero page and links complete

--- a/index.html
+++ b/index.html
@@ -13,7 +13,24 @@
   <h2 class="Roboto_Headers">Three Great Recipies From 'Odin's Kitchen'</h2>
 
   <img class="circle" src="assets/images/lasagne.webp" width="200" height="200">
+
   <p class="recipie_link">Make this lovely lasagne <a class="href" href="assets/pages/lasagne.html">Here</a></p>
+
+  <p class="text">Find <strong>TWO</strong> more great recipies below</p>
+
+  <ul class="text">
+    <img class="circle" src="/assets/images/meatballs.webp" width="150">
+
+    <li>Authentic spanish meatballs <a class="href" href="/assets/pages/meatballs.html">Here</a>
+    </li>
+
+    <img class="circle" src="/assets/images/mushroom-soup.webp" width="150">
+    <br>
+
+    <li>Wild mushroom soup <a class="href" href="assets/pages/mushroom-soup.html">Here</a> </li>
+  </ul>
+
+
 
 
   <script src="assets/js/script.js"></script>
