--- a/assets/pages/mushroom-soup.html
+++ b/assets/pages/mushroom-soup.html
@@ -4,12 +4,44 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="assets/css/style.css" type="text/css">
-  <title>Odin Mushroom soup</title>
+  <link rel="stylesheet" href="../css/style.css" type="text/css">
+  <title>Odin Mushroom Soup</title>
 </head>
 
 <body>
+  <!-- Nav bar, button wrapped in an anchor -->
+  <nav class="home">
+    <a href="../../index.html">
+      <button class="home-button">HOME</button>
+    </a>
+  </nav>
+
   <h1 class="Delius_Headers">Odin Mushroom Soup</h1>
+
+  <img class="circle" src="../images/mushroom-soup.webp" width="200" height="200">
+  <p class="recipie_link">A rich and spicy crowd pleaser</p>
+  <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga ea distinctio necessitatibus.</p>
+
+  <h3 class="sub-heading">Ingredients</h3>
+
+  <ul class="text align-text-left">
+    <li>Lorem ipsum dolor sit amet consectetur</li>
+    <li>Lorem, ipsum dolor.</li>
+    <li>Lorem ipsum dolor sit.</li>
+    <li>Lorem ipsum dolor sit amet consectetur.</li>
+    <li>Lorem, ipsum.</li>
+  </ul>
+
+  <h3 class="sub-heading">Steps</h3>
+
+  <ol class="text align-text-left">
+    <li>Lorem ipsum dolor sit amet consectetur adipisicing.</li>
+    <li>Lorem ipsum dolor sit.</li>
+    <li>Lorem, ipsum.</li>
+    <li>Lorem ipsum dolor sit.</li>
+    <li>Lorem!</li>
+  </ol>
+
 
   <script src="assets/js/script.js"></script>
 </body>
