--- a/index.html
+++ b/index.html
@@ -18,16 +18,15 @@
 
   <p class="text">Find <strong>TWO</strong> more great recipies below</p>
 
-  <ul class="text">
-    <img class="circle" src="/assets/images/meatballs.webp" width="150">
 
-    <li>Authentic spanish meatballs <a class="href" href="/assets/pages/meatballs.html">Here</a>
-    </li>
+  <img class="circle" src="/assets/images/meatballs.webp" alt="picture of a bowl of meatballs" width="150">
 
-    <img class="circle" src="/assets/images/mushroom-soup.webp" width="150">
+  <p>Authentic spanish meatballs <a class="href" href="/assets/pages/meatballs.html">Here</a></p>
 
-    <li>Wild mushroom soup <a class="href" href="assets/pages/mushroom-soup.html">Here</a> </li>
-  </ul>
+  <img class="circle" src="/assets/images/mushroom-soup.webp" alt="picture of a bowl of soup" width="150">
+
+  <p>Wild mushroom soup <a class="href" href="assets/pages/mushroom-soup.html">Here</a> </p>
+
 
 
 
