--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <h1 class="Delius_Headers">Odin Recipes</h1>
   <h2 class="Roboto_Headers">Three Great Recipies From 'Odin's Kitchen'</h2>
 
-  <img class="circle" src="assets/images/lasagne.webp" width="200" height="200">
+  <img class="circle" src="assets/images/lasagne.webp" alt="image of a lasagne" width="200" height="200">
 
   <p class="recipie_link">Make this lovely lasagne <a class="href" href="assets/pages/lasagne.html">Here</a></p>
 
