correct images not displaying.

--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
   <p class="text">Find <strong>TWO</strong> more great recipies below</p>
 
 
-  <img class="circle" src="/assets/images/meatballs.webp" alt="picture of a bowl of meatballs" width="150">
+  <img class="circle" src="assets/images/meatballs.webp" alt="picture of a bowl of meatballs" width="150">
 
-  <p>Authentic spanish meatballs <a class="href" href="/assets/pages/meatballs.html">Here</a></p>
+  <p class="recipie_link">Authentic spanish meatballs <a class="href" href="/assets/pages/meatballs.html">Here</a></p>
 
-  <img class="circle" src="/assets/images/mushroom-soup.webp" alt="picture of a bowl of soup" width="150">
+  <img class="circle" src="assets/images/mushroom-soup.webp" alt="picture of a bowl of soup" width="150">
 
-  <p>Wild mushroom soup <a class="href" href="assets/pages/mushroom-soup.html">Here</a> </p>
+  <p class="recipie_link">Wild mushroom soup <a class="href" href="assets/pages/mushroom-soup.html">Here</a> </p>
 
 
 
