--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <img class="circle" src="assets/images/meatballs.webp" alt="picture of a bowl of meatballs" width="150">
 
-  <p class="recipie_link">Authentic spanish meatballs <a class="href" href="/assets/pages/meatballs.html">Here</a></p>
+  <p class="recipie_link">Authentic spanish meatballs <a class="href" href="assets/pages/meatballs.html">Here</a></p>
 
   <img class="circle" src="assets/images/mushroom-soup.webp" alt="picture of a bowl of soup" width="150">
 
